ingress/api-gateway-ingress-controller.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
spec:
  type: NodePort  # Instead of NodePort
  ports:
    - port: 80
      targetPort: 80
    - port: 443
      targetPort: 443
