ingress/english-tracker-fe-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: english-tracker-fe-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - gungtoi.site
  rules:
  - host: gungtoi.site 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: english-tracker-fe-service
            port:
              number: 80
