ingress/jenkins.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - gungtoi.site
    secretName: gungtoi-site-tls
  rules:
  - host: gungtoi.site 
    http:
      paths:
      - path: /jenkins
        pathType: Prefix
        backend:
          service:
            name: api-gateway-service
            port:
              number: 80
